renaming some text to Atlantic Canada

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Resources to find offline fighting game events and connect with ohio players.">
 
-  <title>Ohio Fighting Game Community (Ohio FGC)</title>
+  <title>Atlantic Canada Fighting Game Community (AC FGC)</title>
   <link rel="icon" href="static/img/favicon.png">
   <!-- Bootstrap core CSS -->
   <link href="static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -17,15 +17,15 @@
   <link href="static/css/custom.css" rel="stylesheet">
 
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:site" content="@ohiofgc" />
-  <meta name="twitter:title" content="Ohio Fighting Game Community" />
-  <meta name="twitter:description" content="Resources to find offline and online fighting game events and connect with ohio players." />
+  <meta name="twitter:site" content="@AtlanticFGC" />
+  <meta name="twitter:title" content="Atlantic Canada Fighting Game Community" />
+  <meta name="twitter:description" content="Resources to find offline and online fighting game events and connect with Atlantic Canada players." />
   <meta name="twitter:image" content="https://ohiofgc.com/static/img/logo_200x200.png" />
 
   <meta property="og:url" content="https://ohiofgc.com" />
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Ohio Fighting Game Community" />
-  <meta property="og:description" content="Resources to find offline and online fighting game events and connect with ohio players." />
+  <meta property="og:title" content="Atlantic Canada Fighting Game Community" />
+  <meta property="og:description" content="Resources to find offline and online fighting game events and connect with Atlantic Canada players." />
   <meta property="og:image" content="https://ohiofgc.com/static/img/logo.png" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-5T4F2CF1ZP"></script>
@@ -68,8 +68,8 @@
 
   <header class="bg-primary text-white">
     <div class="container text-center">
-      <h1>Ohio Fighting Game Community</h1>
-      <p class="lead">Resources to find Ohio based events and connect with local players.</p>
+      <h1>Atlantic Canada Fighting Game Community</h1>
+      <p class="lead">Resources to find Atlantic Canada based events and connect with local players.</p>
     </div>
   </header>
 
@@ -96,7 +96,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <h2 class="text-center">Ohio Fighting Game Events</h2>
+          <h2 class="text-center">Atlantic Canada Fighting Game Events</h2>
           <div class="desktop-only">
           <div class="iframe-container">
             <iframe src="https://calendar.google.com/calendar/embed?src=tj8iv1v24a3qbghc5rvla13amc%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" frameborder="0" scrolling="no"></iframe>
@@ -160,7 +160,7 @@
           </div>
         </div>
         <div class="col-lg-4 mx-auto">
-          <h3>Facebook</h3>
+          <h3>Streams & VODs</h3>
           <div class="list-group">
             <a class="list-group-item" href="https://www.facebook.com/groups/282756958903214/">Ohio FGC <span class="badge badge-secondary float-right">Ohio</span></a>
             <a class="list-group-item" href="https://www.facebook.com/groups/cbusfg/">Columbus Fighting Games <span class="badge badge-secondary float-right">Columbus</span></a>
