Updating to current wip on head to head section

--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#streamers">Streamers</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="headtohead.html">Head to Head</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -111,6 +114,7 @@
   </section>
 
   <section id="tos" class="bg-light">
+  </div>  
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
@@ -135,6 +139,7 @@
         </div>
       </div>
     </div>
+
   </section>
 
   <section id="social">
