--- a/index.html
+++ b/index.html
@@ -149,14 +149,11 @@
         <div class="col-lg-4 mx-auto">
           <h3>Discord</h3>
           <div class="list-group">
-            <a class="list-group-item" href="https://discord.gg/V3W9ftx">Queen City Fights <span class="badge badge-secondary float-right">Cincinnati</span></a>
-            <a class="list-group-item" href="https://discord.gg/59PPVbk">Yeah I Gotcha <span class="badge badge-secondary float-right">Cleveland</span>
-            <a class="list-group-item" href="https://discord.gg/hbJh5zd">Outer Haven <span class="badge badge-secondary float-right">Cleveland/Akron</span></a>
-            <a class="list-group-item" href="https://discord.gg/b9C9tht">Columbus FGC <span class="badge badge-secondary float-right">Columbus</span></a>
-            <a class="list-group-item" href="https://discord.com/invite/jSxrfU5EwC">Midwest Mashup <span class="badge badge-secondary float-right">Dayton</span></a>
-            <a class="list-group-item" href="https://discord.gg/n6tB2s6">Kent FGC <span class="badge badge-secondary float-right">Kent</span></a>
-            <a class="list-group-item" href="https://discord.gg/rV79ZbTbRV">Toledo Smash/FGC <span class="badge badge-secondary float-right">Toledo</span></a>
-	    <a class="list-group-item" href="https://discord.gg/fszGBCBWX9">Run it Back Gaming <span class="badge badge-secondary float-right">Youngstown</span></a>
+            <a class="list-group-item" href="https://discord.gg/JdBj9mn">Atlantic Canada FGC</a>
+            <a class="list-group-item" href="https://discord.gg/auveEszrze">PEI Fighterz</a>
+	    <a class="list-group-item" href="https://discord.gg/FWPNw8tMdd">Atlantic DBFZ </a>
+	    <a class="list-group-item" href="https://discord.gg/FWPNw8tMdd">test123 <span class="badge badge-secondary float-right">Cleveland</span></a>
+
           </div>
         </div>
         <div class="col-lg-4 mx-auto">
