--- a/index.html
+++ b/index.html
@@ -156,18 +156,25 @@
           <div class="list-group">
             <a class="list-group-item" href="https://discord.gg/JdBj9mn">Atlantic Canada FGC</a>
             <a class="list-group-item" href="https://discord.gg/auveEszrze">PEI Fighterz</a>
-	    <a class="list-group-item" href="https://discord.gg/FWPNw8tMdd">Atlantic DBFZ </a>
-	    <a class="list-group-item" href="https://discord.gg/FWPNw8tMdd">test123 <span class="badge badge-secondary float-right">Cleveland</span></a>
+            <a class="list-group-item" href="https://discord.gg/SGAAzHzKtz">Newfoundland Fighting Jam</a>
+		  
+	    <a class="list-group-item" href="https://discord.gg/fXz2zuf2Vh">SF Atlantic Canada</a>
+            <a class="list-group-item" href="https://discord.gg/FWPNw8tMdd">GGST Atlantic Canada </a>
+	    <a class="list-group-item" href="https://discord.gg/KkG25medCZ">Atlantic DBFZ</a>
+            <a class="list-group-item" href="https://discord.gg/R2TuMapcVu">Atlantic Canada GBVSR </a>
+            <a class="list-group-item" href="https://discord.gg/j6Gz42atba">Atlantic Canada Under Night </a>
+	    <a class="list-group-item" href="https://discord.gg/FWPNw8tMdd">test123 <span class="badge badge-secondary float-right">BANNER TEXT</span></a>
 
           </div>
         </div>
         <div class="col-lg-4 mx-auto">
           <h3>Streams & VODs</h3>
           <div class="list-group">
-            <a class="list-group-item" href="https://www.facebook.com/groups/282756958903214/">Ohio FGC <span class="badge badge-secondary float-right">Ohio</span></a>
-            <a class="list-group-item" href="https://www.facebook.com/groups/cbusfg/">Columbus Fighting Games <span class="badge badge-secondary float-right">Columbus</span></a>
-            <a class="list-group-item" href="https://www.facebook.com/groups/71824097120/">Toledo Fighting Game Scene <span class="badge badge-secondary float-right">Toledo</span></a>
-            <a class="list-group-item" href="https://www.facebook.com/groups/CincyFighters/">Cincinnati Fighting Game Community <span class="badge badge-secondary float-right">Cincinnati</span></a>
+            <a class="list-group-item" href="https://www.twitch.tv/pei_fighterz">twitch.tv/pei_fighterz<span class="badge badge-secondary float-right">MAIN AC FGC STREAM</span></a>
+	    <a class="list-group-item" href="https://www.youtube.com/@pei_fighterz">PEI Fighterz youtube</a>
+            <a class="list-group-item" href="https://www.twitch.tv/mrAJC">twitch.tv/mrAJC<span class="badge badge-secondary float-right">PEI/UNI/GBVS</span></a>
+            <a class="list-group-item" href="https://www.twitch.tv/fredericton_fgc">twitch.tv/fredericton_fgc"<span class="badge badge-secondary float-right">NB</span></a>
+            <a class="list-group-item" href="https://www.twitch.tv/unholy_hess">twitch.tv/unholy_hess"<span class="badge badge-secondary float-right">SF6</span></a>
           </div>
         </div>
         <div class="col-lg-4 mx-auto">
