use AC FGC google calendar

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Resources to find offline fighting game events and connect with ohio players.">
+  <meta name="description" content="Resources  to find offline fighting game events and connect with ohio players.">
 
   <title>Atlantic Canada Fighting Game Community (AC FGC)</title>
   <link rel="icon" href="static/img/favicon.png">
@@ -101,8 +101,8 @@
           <div class="iframe-container">
 <iframe id="open-web-calendar" 
     style="background:url('https://raw.githubusercontent.com/niccokunzmann/open-web-calendar/master/static/img/loaders/circular-loader.gif') center center no-repeat;"
-    src="https://open-web-calendar.hosted.quelltext.eu/calendar.html?css=.event%2C%20.dhx_cal_tab.active%2C%20.dhx_cal_tab.active%3Ahover%20%7Bbackground-color%3A%20%237fb9bd%3B%7D%20.dhx_month_head%2C%20.dhx_cal_tab%2C%20.dhx_cal_today_button%20%7Bcolor%3A%20%237fb9bd%3B%7D%20.dhx_cal_tab%2C%20.dhx_cal_tab.active%20%7Bborder-color%3A%20%237fb9bd%3B%7D.dhx_scale_holder_now%2C%20.dhx_now%20.dhx_month_head%2C%20.dhx_now%20.dhx_month_body%20%7B%20background-color%3A%20%23ededed%3B%7D&amp;target=_blank&amp;title=AC%20FGC%20Events&amp;url=https%3A%2F%2Fcalendar.google.com%2Fcalendar%2Fical%2Fapjm4053%2540gmail.com%2Fpublic%2Fbasic.ics"
-    sandbox="allow-scripts allow-same-origin allow-popups"
+    src="https://open-web-calendar.hosted.quelltext.eu/calendar.html?css=.dhx_cal_navline%2C%20.dhx_scale_bar%2C%20.dhx_cal_container%2C%20.dhx_cal_header%2C%20.dhx_cal_scale_placeholder%2C%20.dhx_scale_holder%2C%20.dhx_scale_hour%20%7Bbackground-color%3A%20%23ffffff%3B%7D.dhx_scale_holder_now%2C%20.dhx_now%20.dhx_month_head%2C%20.dhx_now%20.dhx_month_body%20%7B%20background-color%3A%20%23dbdbdb%3B%7D.dhx_month_body%2C%20.dhx_month_head%2C%20.dhx_cal_container%20%7B%20background-color%3A%20%23ffffff%3B%20%7D&amp;hour_format=%25h%3A%25i%E2%80%AF%25A&amp;url=https%3A%2F%2Fcalendar.google.com%2Fcalendar%2Fical%2F2339432fab8eda97a2905847ff14e699a6d08aeaa42ba102c19292575e8a9e24%2540group.calendar.google.com%2Fpublic%2Fbasic.ics"
+    sandbox="allow-scripts allow-same-origin allow-top-navigation"
     allowTransparency="true" scrolling="no" 
     frameborder="0" height="600px" width="100%"></iframe>
 	  </div>
