Removing unused sections

--- a/index.html
+++ b/index.html
@@ -54,9 +54,6 @@
             <a class="nav-link js-scroll-trigger" href="#events">Events</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#tos">Tournament Organizers</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#social">Social Media</a>
           </li>
           <li class="nav-item">
@@ -91,13 +88,6 @@
         </div>
       </div>
     </div>
-    <div class="row pt-5">
-      <div class="col">
-        <div class="alert alert-danger text-center" style="width: 100%" role="alert">
-          <a href="https://game.capcom.com/cfn/sfv/dojo/profile/name/ohiofgc_com">Join our SFV Dojo!</a>
-        </div>
-      </div>
-    </div>
   </div>
 </section>
 
@@ -122,37 +112,6 @@
         </div>
       </div>
     </div>
-
-
-
-  <section id="tos" class="bg-light">
-  </div>  
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <h2 class="text-center">Tournament Organizers</h2>
-          <p class="lead text-center">People who run events and others who can help you find what you're looking for.</p>
-          <div class="list-group">
-            <a class="list-group-item" href="https://twitter.com/codecory">corjam <span class="badge badge-secondary float-right">Akron</span></a>
-            <a class="list-group-item" href="https://twitter.com/AilerusVMP">Ailerus <span class="badge badge-secondary float-right">Cincinnati</span></a>
-            <a class="list-group-item" href="https://twitter.com/Specialist_513">Specialist 513 <span class="badge badge-secondary float-right">Cincinnati</span></a>
-            <a class="list-group-item" href="https://twitter.com/OceanOfTiers">Ocean <span class="badge badge-secondary float-right">Cleveland</span></a>
-            <a class="list-group-item" href="https://twitter.com/AYYLAM0">AYY LAM0 <span class="badge badge-secondary float-right">Cleveland</span></a>
-            <a class="list-group-item" href="https://twitter.com/1Life2Play">1life2play <span class="badge badge-secondary float-right">Cleveland</span></a>
-            <a class="list-group-item" href="https://twitter.com/OHBigBoss">Big Boss <span class="badge badge-secondary float-right">Columbus</span></a>
-            <a class="list-group-item" href="https://twitter.com/maxim_ace">Maxim Ace <span class="badge badge-secondary float-right">Columbus</span></a>
-            <a class="list-group-item" href="https://twitter.com/TheKiest">TheKiest <span class="badge badge-secondary float-right">Columbus</span></a>
-            <a class="list-group-item" href="https://twitter.com/ZionFGC">Zion <span class="badge badge-secondary float-right">Columbus</span></a>
-            <a class="list-group-item" href="https://twitter.com/Aeroforce0">Aeroforce <span class="badge badge-secondary float-right">Kent</span></a>
-            <a class="list-group-item" href="https://twitter.com/VauNDooM">VaunDoom <span class="badge badge-secondary float-right">Mansfield</span></a>
-            <a class="list-group-item" href="https://twitter.com/KenstarFGC">Kenstar <span class="badge badge-secondary float-right">Toledo</span></a>
-	    <a class="list-group-item" href="https://twitter.com/blakk_sensei">Blakk Sensei <span class="badge badge-secondary float-right">Youngstown</span></a>
-          </div>
-        </div>
-      </div>
-    </div>
-
-  </section>
 
   <section id="social">
     <div class="container">
@@ -182,7 +141,7 @@
         <div class="col-lg-4 mx-auto">
           <h3>Streams & VODs</h3>
           <div class="list-group">
-            <a class="list-group-item" href="https://www.twitch.tv/pei_fighterz">twitch.tv/pei_fighterz<span class="badge badge-secondary float-right">MAIN AC FGC STREAM</span></a>
+            <a class="list-group-item" href="https://www.twitch.tv/pei_fighterz">twitch.tv/pei_fighterz<span class="badge badge-secondary float-right"><img style="max-width: 75px;" class="responsive-img mx-auto d-block" src="static/img/twitch.png">Twitch</span></a>
 	    <a class="list-group-item" href="https://www.youtube.com/@pei_fighterz">PEI Fighterz youtube</a>
             <a class="list-group-item" href="https://www.twitch.tv/mrAJC">twitch.tv/mrAJC<span class="badge badge-secondary float-right">PEI/UNI/GBVS</span></a>
             <a class="list-group-item" href="https://www.twitch.tv/fredericton_fgc">twitch.tv/fredericton_fgc"<span class="badge badge-secondary float-right">NB</span></a>
