--- a/index.html
+++ b/index.html
@@ -128,37 +128,38 @@
             <a class="list-group-item" href="https://discord.gg/JdBj9mn">Atlantic Canada FGC</a>
             <a class="list-group-item" href="https://discord.gg/auveEszrze">PEI Fighterz</a>
             <a class="list-group-item" href="https://discord.gg/SGAAzHzKtz">Newfoundland Fighting Jam</a>
-		  
-	    <a class="list-group-item" href="https://discord.gg/fXz2zuf2Vh">SF Atlantic Canada</a>
+            <a class="list-group-item" href="https://discord.gg/3ssWqhNcvY">Green Door Smash & FGC <span class="badge badge-secondary float-right">Fredericton, NB</span></a>
+
+            <div>&nbsp;</div>
+            <a class="list-group-item" href="https://discord.gg/fXz2zuf2Vh">SF Atlantic Canada</a>
             <a class="list-group-item" href="https://discord.gg/FWPNw8tMdd">GGST Atlantic Canada </a>
-	    <a class="list-group-item" href="https://discord.gg/KkG25medCZ">Atlantic DBFZ</a>
+	          <a class="list-group-item" href="https://discord.gg/KkG25medCZ">Atlantic DBFZ</a>
             <a class="list-group-item" href="https://discord.gg/R2TuMapcVu">Atlantic Canada GBVSR </a>
             <a class="list-group-item" href="https://discord.gg/j6Gz42atba">Atlantic Canada Under Night </a>
-	    <a class="list-group-item" href="https://discord.gg/FWPNw8tMdd">test123 <span class="badge badge-secondary float-right">BANNER TEXT</span></a>
-
           </div>
         </div>
         <div class="col-lg-4 mx-auto">
-          <h3>Streams & VODs</h3>
+          <h3>Twitch <img style="max-width: 75px;" class="responsive-img mx-auto d-block" src="static/img/twitch.png"></h3>
           <div class="list-group">
-            <a class="list-group-item" href="https://www.twitch.tv/pei_fighterz">twitch.tv/pei_fighterz<span class="badge badge-secondary float-right"><img style="max-width: 75px;" class="responsive-img mx-auto d-block" src="static/img/twitch.png">Twitch</span></a>
-	    <a class="list-group-item" href="https://www.youtube.com/@pei_fighterz">PEI Fighterz youtube</a>
-            <a class="list-group-item" href="https://www.twitch.tv/mrAJC">twitch.tv/mrAJC<span class="badge badge-secondary float-right">PEI/UNI/GBVS</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/fredericton_fgc">twitch.tv/fredericton_fgc"<span class="badge badge-secondary float-right">NB</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/unholy_hess">twitch.tv/unholy_hess"<span class="badge badge-secondary float-right">SF6</span></a>
+            <a class="list-group-item" href="https://www.twitch.tv/pei_fighterz">PEI FighterZ<span class="badge badge-secondary float-right">PEI</span></a>
+            <a class="list-group-item" href="https://www.twitch.tv/mrAJC">mrAJC<span class="badge badge-secondary float-right">PEI/UNI/GBVS</span></a>
+            <a class="list-group-item" href="https://www.twitch.tv/fredericton_fgc">Fredericton FGC"<span class="badge badge-secondary float-right">NB</span></a>
+            <a class="list-group-item" href="https://www.twitch.tv/acadianyeti">Acadian Yeti"<span class="badge badge-secondary float-right">NS</span></a>
+            <a class="list-group-item" href="https://www.twitch.tv/unholy_hess">unholy_hess"<span class="badge badge-secondary float-right">SF6</span></a>
           </div>
+        <div>&nbsp;</div>
+          <h3>Youtube <img style="max-width: 75px;" class="responsive-img mx-auto d-block" src="static/img/Youtube.png"></h3>
+          <div class="list-group">
+	          <a class="list-group-item" href="https://www.youtube.com/@pei_fighterz">PEI FighterZ youtube</a>
+          </div>
+
         </div>
         <div class="col-lg-4 mx-auto">
           <h3>Twitter</h3>
           <div class="list-group">
-            <a class="list-group-item" href="https://twitter.com/ohiofgc">Ohio FGC <span class="badge badge-secondary float-right">Ohio</span></a>
-            <a class="list-group-item" href="https://twitter.com/akronfgc">Akron FGC <span class="badge badge-secondary float-right">Akron</span></a>
-            <a class="list-group-item" href="https://twitter.com/OuterHavenGG">Outer Haven <span class="badge badge-secondary float-right">Cleveland</span></a>
-            <a class="list-group-item" href="https://twitter.com/1Life2Play">1life2play <span class="badge badge-secondary float-right">Cleveland</span></a>
-            <a class="list-group-item" href="https://twitter.com/YeahIGotchaFGC">Yeah, I gotcha FGC <span class="badge badge-secondary float-right">Cleveland</span></a>
-            <a class="list-group-item" href="https://twitter.com/MWMashupFGC">Midwest Mashup <span class="badge badge-secondary float-right">Dayton</span></a>
-            <a class="list-group-item" href="https://twitter.com/KentFGC_">Kent FGC <span class="badge badge-secondary float-right">Kent</span></a>
-            <a class="list-group-item" href="https://twitter.com/KenstarFGC">Kenstar <span class="badge badge-secondary float-right">Toledo</span></a>
+            <a class="list-group-item" href="https://twitter.com/AtlanticFGC">Atlantic FGC</a>
+            <a class="list-group-item" href="https://twitter.com/PEIFighterZ">PEI FighterZ</a>
+            <a class="list-group-item" href="https://twitter.com/greendoorsmash">Green Door Smash<span class="badge badge-secondary float-right">Fredericton, NB</span></a>
           </div>
         </div>
       </div>
