--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Resources  to find offline fighting game events and connect with ohio players.">
+  <meta name="description" content="Resources  to find offline fighting game events in Atlantic Canada.">
 
   <title>Atlantic Canada Fighting Game Community (AC FGC)</title>
   <link rel="icon" href="static/img/favicon.png">
@@ -29,7 +29,7 @@
   <meta property="og:description" content="Resources to find offline and online fighting game events and connect with Atlantic Canada players." />
   <meta property="og:image" content="https://ohiofgc.com/static/img/logo.png" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5T4F2CF1ZP"></script>
+  <!--   <script async src="https://www.googletagmanager.com/gtag/js?id=G-5T4F2CF1ZP"></script>.  --->
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -44,7 +44,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="static/img/logo.png" class="d-inline-block align-top img-fluid logo" alt="Logo"/></a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="static/img/AC_FGC_Logo.jpg" class="d-inline-block align-top img-fluid logo" alt="Logo"/></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -54,13 +54,10 @@
             <a class="nav-link js-scroll-trigger" href="#events">Events</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#social">Social Media</a>
+            <a class="nav-link js-scroll-trigger" href="#social">Find Your Scene</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#streamers">Streamers</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="headtohead.html">Current Standings</a>
+            <a class="nav-link js-scroll-trigger" href="headtohead.html">Street Fighter Atlantic Cup Standings</a>
           </li>
           <!--
           <li class="nav-item">
@@ -84,7 +81,8 @@
     <div class="row">
       <div class="col">
         <div class="video-wrapper">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/c8v7XFRG7jk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/20-gKBf_eZc" title="Kings of Hali #6! |GGXrd| [GF] Kivistor (Johnny) vs Kal (Leo)" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+           <!---- <iframe width="560" height="315" src="https://www.youtube.com/embed/c8v7XFRG7jk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> --->
         </div>
       </div>
     </div>
@@ -123,7 +121,7 @@
       </div>
       <div class="row">
         <div class="col-lg-4 mx-auto">
-          <h3>Discord</h3>
+          <h3>Discord<img style="max-width: 45px;" class="responsive-img mx-auto" src="static/img/discord.png"></h3>
           <div class="list-group">
             <a class="list-group-item" href="https://discord.gg/JdBj9mn">Atlantic Canada FGC</a>
             <a class="list-group-item" href="https://discord.gg/auveEszrze">PEI Fighterz</a>
@@ -139,18 +137,18 @@
           </div>
         </div>
         <div class="col-lg-4 mx-auto">
-          <h3>Twitch <img style="max-width: 45px;" class="responsive-img mx-auto d-block" src="static/img/twitch.png"></h3>
+          <h3>Twitch <img style="max-width: 45px;" class="responsive-img mx-auto" src="static/img/twitch.png"></h3>
           <div class="list-group">
             <a class="list-group-item" href="https://www.twitch.tv/pei_fighterz">PEI FighterZ<span class="badge badge-secondary float-right">PEI</span></a>
             <a class="list-group-item" href="https://www.twitch.tv/mrAJC">mrAJC<span class="badge badge-secondary float-right">PEI/UNI/GBVS</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/fredericton_fgc">Fredericton FGC"<span class="badge badge-secondary float-right">NB</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/acadianyeti">Acadian Yeti"<span class="badge badge-secondary float-right">NS</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/unholy_hess">unholy_hess"<span class="badge badge-secondary float-right">SF6</span></a>
+            <a class="list-group-item" href="https://www.twitch.tv/fredericton_fgc">Fredericton FGC<span class="badge badge-secondary float-right">NB</span></a>
+            <a class="list-group-item" href="https://www.twitch.tv/acadianyeti">Acadian Yeti<span class="badge badge-secondary float-right">NS</span></a>
+            <a class="list-group-item" href="https://www.twitch.tv/unholy_hess">unholy_hess<span class="badge badge-secondary float-right">SF6</span></a>
           </div>
         <div>&nbsp;</div>
-          <h3>Youtube <img style="max-width: 45px;" class="responsive-img mx-auto d-block" src="static/img/Youtube.png"></h3>
+          <h3>Youtube <img style="max-width: 45px;" class="responsive-img mx-auto" src="static/img/Youtube.png"></h3>
           <div class="list-group">
-	          <a class="list-group-item" href="https://www.youtube.com/@pei_fighterz">PEI FighterZ youtube</a>
+	          <a class="list-group-item" href="https://www.youtube.com/@pei_fighterz">PEI FighterZ</a>
           </div>
 
         </div>
@@ -160,52 +158,6 @@
             <a class="list-group-item" href="https://twitter.com/AtlanticFGC">Atlantic FGC</a>
             <a class="list-group-item" href="https://twitter.com/PEIFighterZ">PEI FighterZ</a>
             <a class="list-group-item" href="https://twitter.com/greendoorsmash">Green Door Smash<span class="badge badge-secondary float-right">Fredericton, NB</span></a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section id="streamers" class="bg-light">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <h2 class="text-center">Streamers</h2>
-          <a class="twitch-link" href="https://twitch.tv/ohiofgc/"><img style="max-width: 75px;" class="responsive-img mx-auto d-block" src="static/img/twitch.png"></a>
-          <p class="lead text-center">People who run streams in Ohio for fighting games.</p> <p class="lead text-center">Click the twitch icon to go to the ohiofgc twitch channel.  It is set up to auto host the streamers you see below.</p>
-          <div class="list-group">
-            <h4>Organizations</h4>
-            <a class="list-group-item" href="https://www.twitch.tv/1life2playFGC/">1Life2Play FGC</a>
-            <a class="list-group-item" href="https://www.twitch.tv/akronzips_fgc/">Akron Zips FGC</a>
-            <a class="list-group-item" href="https://www.twitch.tv/kentfgc">KentFGC</a>
-            <a class="list-group-item" href="https://www.twitch.tv/matchstickmelee">MatchStickMelee </a>
-            <a class="list-group-item" href="https://www.twitch.tv/outerhaveneleague/">Outer Haven</a>
-            <a class="list-group-item" href="https://www.twitch.tv/vampirearcadia/">Vampire Arcadia</a>
-            <a class="list-group-item" href="https://www.twitch.tv/yeahigotcha">Yeah, I Gotcha</a>
-            <hr />
-            <h4>Individuals</h4>
-            <a class="list-group-item" href="https://www.twitch.tv/8bitsweater">8bitsweater <span class="badge badge-secondary float-right">SFV</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/al_ultimatevitality/">Ultimate Vitality <span class="badge badge-secondary float-right">SFV</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/comatosecw/">ComatoseCW <span class="badge badge-secondary float-right">T7</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/dano1775/">dano75</a>
-            <a class="list-group-item" href="https://www.twitch.tv/darkzero_omega/">Darkzero_Omega <span class="badge badge-secondary float-right">SFV</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/davidswoops/">DavidSwoops <span class="badge badge-secondary float-right">SFV</span></a>
-            <a class="list-group-item" href="https://twitch.tv/genesisDC/">GenesisDC <span class="badge badge-secondary float-right">Anime</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/govpancakes/">GovPancakes <span class="badge badge-secondary float-right">Anime</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/fgc_hitman/">Hitman <span class="badge badge-secondary float-right">SFV</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/iChrisPanda">iChrisPanda </a>
-            <a class="list-group-item" href="https://www.twitch.tv/isman1998/">Isman1998 <span class="badge badge-secondary float-right">T7</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/joemadic">Joemadic <span class="badge badge-secondary float-right">MK</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/kest0n_fgc">Kest0n <span class="badge badge-secondary float-right">SFV</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/thekompetitor">Kompetitor <span class="badge badge-secondary float-right">MK11</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/lichmassacre">Lichmassacre <span class="badge badge-secondary float-right">SNK</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/the_mecha_alex/">Mecha Alex <span class="badge badge-secondary float-right">Anime</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/MrMostafles/">MrMostafles <span class="badge badge-secondary float-right">SFV</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/nymphiax/">Nymphiax <span class="badge badge-secondary float-right">DBFZ</span><span class="badge badge-secondary float-right">Skullgirls</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/penknight89">PenKnight <span class="badge badge-secondary float-right">SFV</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/shaolinpretzels/">ShaolinPretzels <span class="badge badge-secondary float-right">Samurai Shodown</span><span class="badge badge-secondary float-right">SFV</span><span class="badge badge-secondary float-right">GBVS</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/WatchTheArmory">The Armory <span class="badge badge-secondary float-right">DBFZ</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/thtb614">The Holy Tony Baker <span class="badge badge-secondary float-right">SFV</span><span class="badge badge-secondary float-right">FEXL</span></a>
           </div>
         </div>
       </div>
