--- a/index.html
+++ b/index.html
@@ -121,19 +121,17 @@
       </div>
       <div class="row">
         <div class="col-lg-4 mx-auto">
-          <h3>Discord<img style="max-width: 45px;" class="responsive-img mx-auto" src="static/img/discord.png"></h3>
+          <h3>Discord<img style="max-width: 60px;" class="responsive-img mx-auto" src="static/img/discord.png"></h3>
           <div class="list-group">
             <a class="list-group-item" href="https://discord.gg/JdBj9mn">Atlantic Canada FGC</a>
-            <a class="list-group-item" href="https://discord.gg/auveEszrze">PEI Fighterz</a>
+            <a class="list-group-item" href="https://discord.gg/auveEszrze">PEI Fighterz </a>
             <a class="list-group-item" href="https://discord.gg/SGAAzHzKtz">Newfoundland Fighting Jam</a>
             <a class="list-group-item" href="https://discord.gg/3ssWqhNcvY">Green Door Smash & FGC <span class="badge badge-secondary float-right">Fredericton, NB</span></a>
-
-            <div>&nbsp;</div>
-            <a class="list-group-item" href="https://discord.gg/fXz2zuf2Vh">SF Atlantic Canada</a>
-            <a class="list-group-item" href="https://discord.gg/FWPNw8tMdd">GGST Atlantic Canada </a>
-	          <a class="list-group-item" href="https://discord.gg/KkG25medCZ">Atlantic DBFZ</a>
-            <a class="list-group-item" href="https://discord.gg/R2TuMapcVu">Atlantic Canada GBVSR </a>
-            <a class="list-group-item" href="https://discord.gg/j6Gz42atba">Atlantic Canada Under Night </a>
+            <a class="list-group-item" href="https://discord.gg/fXz2zuf2Vh">SF Atlantic Canada <span class="badge badge-secondary float-right">Street Fighter</span></a>
+            <a class="list-group-item" href="https://discord.gg/FWPNw8tMdd">GGST Atlantic Canada <span class="badge badge-secondary float-right">Guilty Gear</span></a>
+	    <a class="list-group-item" href="https://discord.gg/KkG25medCZ">Atlantic DBFZ </a>
+            <a class="list-group-item" href="https://discord.gg/R2TuMapcVu">Atlantic Canada GranBlue Versus Rising </a>
+            <a class="list-group-item" href="https://discord.gg/j6Gz42atba">Atlantic Canada Under Night</a>
           </div>
         </div>
         <div class="col-lg-4 mx-auto">
@@ -143,7 +141,7 @@
             <a class="list-group-item" href="https://www.twitch.tv/mrAJC">mrAJC<span class="badge badge-secondary float-right">PEI/UNI/GBVS</span></a>
             <a class="list-group-item" href="https://www.twitch.tv/fredericton_fgc">Fredericton FGC<span class="badge badge-secondary float-right">NB</span></a>
             <a class="list-group-item" href="https://www.twitch.tv/acadianyeti">Acadian Yeti<span class="badge badge-secondary float-right">NS</span></a>
-            <a class="list-group-item" href="https://www.twitch.tv/unholy_hess">unholy_hess<span class="badge badge-secondary float-right">SF6</span></a>
+            <a class="list-group-item" href="https://www.twitch.tv/unholy_hess">unholy hess<span class="badge badge-secondary float-right">SF6</span></a>
           </div>
         <div>&nbsp;</div>
           <h3>Youtube <img style="max-width: 45px;" class="responsive-img mx-auto" src="static/img/Youtube.png"></h3>
@@ -167,8 +165,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Created and maintained by corjam.</p>
-      <p class="m-0 text-center text-white"><a href="https://twitter.com/codecory">Twitter</a> | <a href="https://github.com/OhioFGC/OhioFGC.github.io">Github</a></p>
+      <p class="m-0 text-center text-white">Based on the OhioFGC <a href="https://github.com/OhioFGC/OhioFGC.github.io">Github</a> template</p>
     </div>
     <!-- /.container -->
   </footer>
