--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="row">
         <div class="col">
           <h2 class="text-center">Atlantic Canada Fighting Game Events</h2>
-          <div class="desktop-only">
+          <div class="">
           <div class="iframe-container">
 <iframe id="open-web-calendar" 
     style="background:url('https://raw.githubusercontent.com/niccokunzmann/open-web-calendar/master/static/img/loaders/circular-loader.gif') center center no-repeat;"
@@ -103,9 +103,6 @@
     allowTransparency="true" scrolling="no" 
     frameborder="0" height="600px" width="100%"></iframe>
 	  </div>
-        </div>
-        <div class="mobile-only text-center">
-          <a class="btn btn-primary text-center mt-3" href="https://calendar.google.com/calendar/r?cid=dGo4aXYxdjI0YTNxYmdoYzVydmxhMTNhbWNAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ">Open Google Calendar</a>
         </div>
         </div>
       </div>
@@ -120,8 +117,8 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-4 mx-auto">
-          <h3>Discord<img style="max-width: 60px;" class="responsive-img mx-auto" src="static/img/discord.png"></h3>
+        <div class="col-lg-4 mx-auto pb-2">
+          <h3>Discord<img style="max-width: 65px;" class="responsive-img mx-auto" src="static/img/discord.png"></h3>
           <div class="list-group">
             <a class="list-group-item" href="https://discord.gg/JdBj9mn">Atlantic Canada FGC</a>
             <a class="list-group-item" href="https://discord.gg/auveEszrze">PEI Fighterz </a>
@@ -129,13 +126,13 @@
             <a class="list-group-item" href="https://discord.gg/3ssWqhNcvY">Green Door Smash & FGC <span class="badge badge-secondary float-right">Fredericton, NB</span></a>
             <a class="list-group-item" href="https://discord.gg/fXz2zuf2Vh">SF Atlantic Canada <span class="badge badge-secondary float-right">Street Fighter</span></a>
             <a class="list-group-item" href="https://discord.gg/FWPNw8tMdd">GGST Atlantic Canada <span class="badge badge-secondary float-right">Guilty Gear</span></a>
-	    <a class="list-group-item" href="https://discord.gg/KkG25medCZ">Atlantic DBFZ </a>
-            <a class="list-group-item" href="https://discord.gg/R2TuMapcVu">Atlantic Canada GranBlue Versus Rising </a>
+	          <a class="list-group-item" href="https://discord.gg/KkG25medCZ">Atlantic DBFZ </a>
+            <a class="list-group-item" href="https://discord.gg/R2TuMapcVu">Atlantic Canada Granblue Versus Rising </a>
             <a class="list-group-item" href="https://discord.gg/j6Gz42atba">Atlantic Canada Under Night</a>
           </div>
         </div>
-        <div class="col-lg-4 mx-auto">
-          <h3>Twitch <img style="max-width: 45px;" class="responsive-img mx-auto" src="static/img/twitch.png"></h3>
+        <div class="col-lg-4 mx-auto pb-2">
+          <h3>Twitch <img style="max-width: 35px;" class="responsive-img mx-auto" src="static/img/twitch.png"></h3>
           <div class="list-group">
             <a class="list-group-item" href="https://www.twitch.tv/pei_fighterz">PEI FighterZ<span class="badge badge-secondary float-right">PEI</span></a>
             <a class="list-group-item" href="https://www.twitch.tv/mrAJC">mrAJC<span class="badge badge-secondary float-right">PEI/UNI/GBVS</span></a>
@@ -144,13 +141,13 @@
             <a class="list-group-item" href="https://www.twitch.tv/unholy_hess">unholy hess<span class="badge badge-secondary float-right">SF6</span></a>
           </div>
         <div>&nbsp;</div>
-          <h3>Youtube <img style="max-width: 45px;" class="responsive-img mx-auto" src="static/img/Youtube.png"></h3>
+          <h3>Youtube <img style="max-width: 35px;" class="responsive-img mx-auto" src="static/img/Youtube.png"></h3>
           <div class="list-group">
 	          <a class="list-group-item" href="https://www.youtube.com/@pei_fighterz">PEI FighterZ</a>
           </div>
 
         </div>
-        <div class="col-lg-4 mx-auto">
+        <div class="col-lg-4 mx-auto pb-2">
           <h3>Twitter</h3>
           <div class="list-group">
             <a class="list-group-item" href="https://twitter.com/AtlanticFGC">Atlantic FGC</a>
