--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 
         </div>
         <div class="col-lg-4 mx-auto pb-2">
-          <h3>Twitter</h3>
+          <h3>Twitter <img style="max-width: 45px;" class="responsive-img mx-auto" src="static/img/x-logo.png"></h3>
           <div class="list-group">
             <a class="list-group-item" href="https://twitter.com/AtlanticFGC">Atlantic FGC</a>
             <a class="list-group-item" href="https://twitter.com/PEIFighterZ">PEI FighterZ</a>
