Centering text proper

--- a/eloleaderboard.html
+++ b/eloleaderboard.html
@@ -110,6 +110,23 @@
       <input class="col-sm-6 custom-select custom-select-sm" list="player-list" id="p2-list-input" style="width: 300px"></input>
       <button type="button" id="headToHeadSubmit" class="btn btn-secondary" aria-pressed="false" autocomplete="off">Submit</button>
   </div>
+  <div id="headtohead"  class="row text-center" style="width: 40%; margin-left: auto; margin-right:auto; margin-top: 20px;" >
+    <div id="player-one"  class="col-sm" style="display: none;">
+      <h1>thisisthelongestname</h1>
+    </div>
+    <div id="score" class="text-center col-sm" style="display: none;">
+      <h1>0 - 2</h1>
+      <h3>0 - 2</h3>
+      <h5 class="text-muted">67% - 33%</h5>
+    </div>
+    <div id="player-two" class="col-sm" style="display: none;">
+      <h1>thisisanotherlongname</h1>
+    </div>
+  </div>
+  </section>
+  <section>
+
+
   </section>
 
 
