--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
   <meta name="twitter:site" content="@AtlanticFGC" />
   <meta name="twitter:title" content="Atlantic Canada Fighting Game Community" />
   <meta name="twitter:description" content="Resources to find offline and online fighting game events and connect with Atlantic Canada players." />
-  <meta name="twitter:image" content="https://ohiofgc.com/static/img/logo_200x200.png" />
+  <meta name="twitter:image" content="https://atlanticcanadafgc.github.io/static/img/AC_FGC_Logo.png" />
 
-  <meta property="og:url" content="https://ohiofgc.com" />
+  <meta property="og:url" content="https://atlanticcanadafgc.github.io" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Atlantic Canada Fighting Game Community" />
   <meta property="og:description" content="Resources to find offline and online fighting game events and connect with Atlantic Canada players." />
-  <meta property="og:image" content="https://ohiofgc.com/static/img/logo.png" />
+  <meta property="og:image" content="https://atlanticcanadafgc.github.io/static/img/AC_FGC_Logo.png" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <!--   <script async src="https://www.googletagmanager.com/gtag/js?id=G-5T4F2CF1ZP"></script>.  --->
   <script>
