--- a/eloleaderboard.html
+++ b/eloleaderboard.html
@@ -19,26 +19,20 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="static/img/logo.png" class="d-inline-block align-top img-fluid logo" alt="Logo"/></a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html"><img src="static/img/AC_FGC_Logo.jpg" class="d-inline-block align-top img-fluid logo" alt="Logo"/></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/#events">Events</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#events">Events</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/#tos">Tournament Organizers</a>
+            <a class="nav-link js-scroll-trigger" href="index.html#social">Find Your Scene</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/#social">Social Media</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="/#streamers">Streamers</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="headtohead.html">Current Standings</a>
+            <a class="nav-link js-scroll-trigger" href="headtohead.html">Street Fighter Atlantic Cup Standings</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="eloleaderboard.html">Elo Leaderboard</a>
