Adding total matches + sets
its nice to have the additional info

--- a/eloleaderboard.html
+++ b/eloleaderboard.html
@@ -74,6 +74,8 @@
             <th scope="col">Elo</th>
             <th scope="col">Match Win %</th>
             <th scope="col">Set Win %</th>
+            <th scope="col">Total Matches</th>
+            <th scope="col">Total Sets</th>
           </tr>
         </thead>
         <tbody id="search-body">
@@ -123,6 +125,8 @@
           <th scope="col">Elo</th>
           <th scope="col">Match Win %</th>
           <th scope="col">Set Win %</th>
+          <th scope="col">Total Matches</th>
+          <th scope="col">Total Sets</th>
         </tr>
       </thead>
       <tbody id="top-ten-body">
