--- a/eloleaderboard.html
+++ b/eloleaderboard.html
@@ -72,9 +72,9 @@
             <th scope="col">Rank</th>
             <th scope="col">Tag</th>
             <th scope="col">Elo</th>
-            <th scope="col">Match Win %</th>
+            <th scope="col">Game Win %</th>
             <th scope="col">Set Win %</th>
-            <th scope="col">Total Matches</th>
+            <th scope="col">Total Games</th>
             <th scope="col">Total Sets</th>
           </tr>
         </thead>
@@ -123,9 +123,9 @@
           <th scope="col">Rank</th>
           <th scope="col">Tag</th>
           <th scope="col">Elo</th>
-          <th scope="col">Match Win %</th>
+          <th scope="col">Game Win %</th>
           <th scope="col">Set Win %</th>
-          <th scope="col">Total Matches</th>
+          <th scope="col">Total Games</th>
           <th scope="col">Total Sets</th>
         </tr>
       </thead>
